[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macromax"
dynamic = ["version"]
description = "Library for solving macroscopic Maxwell's equations for electromagnetic waves in gain-free heterogeneous (bi-)(an)isotropic (non)magnetic materials. This is of particular interest to calculate the light field within complex, scattering, tissues."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Tom Vettenburg", email = "t.vettenburg@dundee.ac.uk" },
]
keywords = ["Maxwell", "electromagnetic", "light", "scattering", "heterogeneous", "anisotropy", "chiral", "magnetic",
    "propagation", "optics",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "coloredlogs>=15.0.1",
    "numpy>=1.26.4",
    "scipy>=0.13.1",
]

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "memory_profiler>=0.61.0",
    "pprofile>=2.2.0",
    "setuptools>=66.1.1",
    "twine>=6.0.0",
]
doc = [
    "coloredlogs>=15.0.1",
    "docutils==0.20.1",
    "m2r2==0.3.3.post2",
    "matplotlib>=3.9.3",
    "numpy>=1.26.4",
    "recommonmark>=0.7.1",
    "scipy>=0.13.1",
    "sphinx-rtd-theme>=3.0.2",
    "Sphinx>=8.1.3",
    "sphinx_autodoc_typehints>=2.5.0",
    "sphinxcontrib_mermaid>=1.0.0",
]

[tool.hatch.version]
path = "macromax/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/macromax",
]
